# infer

./: .gitignore  CMakeLists.txt
src/: infer.cu  infer.hpp  main.cpp
